--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.0",
+    "styled-reset": "^4.1.4",
     "typescript": "~3.7.2"
   },
   "scripts": {
