--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-toastify": "^5.5.0",
     "styled-components": "^5.1.0",
     "styled-reset": "^4.1.4",
     "typescript": "~3.7.2"
