--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "graphql": "^15.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-apollo": "^3.1.5",
+    "react-apollo": "2.5",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
