--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-apollo": "2.5",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "4.3.1",
     "react-scripts": "3.4.1",
     "react-toastify": "^5.5.0",
     "styled-components": "^5.1.0",
