--- a/package.json
+++ b/package.json
@@ -8,25 +8,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.4",
-    "apollo": "^2.27.3",
     "apollo-boost": "^0.4.7",
     "graphql": "^15.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-apollo": "2.5",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
     "react-helmet": "^6.0.0",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.4.1",
     "react-toastify": "^5.5.0",
     "styled-components": "^5.1.0",
-    "styled-reset": "^4.1.4",
-    "typescript": "~3.7.2"
+    "styled-reset": "^4.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +30,13 @@
     "eject": "react-scripts eject",
     "precodegen": "apollo schema:download --endpoint=http://localhost:4000/graphql",
     "codegen": "apollo codegen:generate src/types/api.d.ts --queries=src/**/*.ts --addTypename --localSchemaFile=schema.json --target typescript --outputFlat"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "typescript": "~3.7.2"
   },
   "eslintConfig": {
     "extends": "react-app"
