--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet": "^6.0.0",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.4.1",
+    "react-sidebar": "^3.0.2",
     "react-toastify": "^5.5.0",
     "styled-components": "^5.1.0",
     "styled-reset": "^4.1.4"
@@ -36,6 +37,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-sidebar": "^3.0.0",
     "typescript": "~3.7.2"
   },
   "eslintConfig": {
