--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^5.1.4",
     "apollo-boost": "^0.4.7",
     "axios": "^0.19.2",
+    "google-maps-react": "^2.0.6",
     "graphql": "^15.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -34,6 +35,7 @@
     "codegen": "apollo codegen:generate src/types/api.d.ts --queries=src/**/*.ts --addTypename --localSchemaFile=schema.json --target typescript --outputFlat"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.39.4",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
