--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "codegen": "apollo codegen:generate src/types/api.d.ts --queries=src/**/*.ts --addTypename --localSchemaFile=schema.json --target typescript --outputFlat"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/googlemaps": "^3.39.4",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
