--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/react-router-dom": "^5.1.4",
     "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-state": "^0.4.2",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.3",
     "axios": "^0.19.2",
     "google-maps-react": "^2.0.6",
     "graphql": "^15.0.0",
@@ -24,7 +32,8 @@
     "react-sidebar": "^3.0.2",
     "react-toastify": "^5.5.0",
     "styled-components": "^5.1.0",
-    "styled-reset": "^4.1.4"
+    "styled-reset": "^4.1.4",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "start": "react-scripts start",
