--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-helmet": "^6.0.0",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.4.1",
+    "react-scripts-ts": "^3.1.0",
     "react-sidebar": "^3.0.2",
     "react-toastify": "^5.5.0",
     "styled-components": "^5.1.0",
@@ -36,13 +37,13 @@
     "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "precodegen": "apollo schema:download --endpoint=http://localhost:4000/graphql",
     "codegen": "apollo codegen:generate src/types/api.d.ts --queries=src/**/*.ts --addTypename --localSchemaFile=schema.json --target typescript --outputFlat",
-    "predeploy": "yarn run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
@@ -62,7 +63,6 @@
   "browserslist": {
     "production": [
       ">0.2%",
-      "not dead",
       "not op_mini all"
     ],
     "development": [
