--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/google-map-react": "^1.1.7",
+    "@types/googlemaps": "^3.39.4",
     "@types/react-router-dom": "^5.1.4",
     "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
@@ -48,7 +50,6 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/googlemaps": "^3.39.4",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
